kube-service-forntend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
spec:
  selector:
    app: vtnf-frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
