kube-service-mqtt.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-mqtt
spec:
  selector:
    app: mqtt-broker
  ports:
    - name: mqtt-port
      port: 1885
      targetPort: 1885
      protocol: TCP
    - name: mqtt-ws-port
      port: 8083
      targetPort: 8083
      protocol: TCP
  type: ClusterIP
