kube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      # proxy_http_version 1.1;
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection "upgrade";
    # nginx.ingress.kubernetes.io/server-snippet: |
    #   error_log /var/log/nginx/error.log;
    #   access_log /var/log/nginx/access.log
    nginx.ingress.kubernetes.io/limit-rpm: "10"
spec:
  ingressClassName: public
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: service-frontend
                port:
                  number: 3000
          - pathType: Prefix
            path: /mqtt
            backend:
              service:
                name: service-mqtt
                port:
                  number: 8083
    # - http:
    #     paths:
